--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <li>
             <a href="./1/index.html">Лабораторная работа 1</a>
         </li>
+        <li>
+            <a href="./2/index.html">Лабораторная работа 2</a>
+        </li>
     </ul>
 </body>
 </html>
