--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <li>
             <a href="./3/index.html">Лабораторная работа 3</a>
         </li>
+        <li>
+            <a href="./4/index.html">Лабораторная работа 4</a>
+        </li>
     </ul>
 </body>
 </html>
