--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <li>
             <a href="./4/index.html">Лабораторная работа 4</a>
         </li>
+        <li>
+            <a href="./5/index.html">Лабораторная работа 5</a>
+        </li>
     </ul>
 </body>
 </html>
