--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <li>
             <a href="./5/index.html">Лабораторная работа 5</a>
         </li>
+        <li>
+            <a href="./6/index.html">Лабораторная работа 6</a>
+        </li>
     </ul>
 </body>
 </html>
