--- a/7/dop.html
+++ b/7/dop.html
@@ -11,75 +11,50 @@
 
     <div class="dir">
         <p>flex-direction</p>
-        <button onclick="setFlexDirection('row')">Row</button>
-        <button onclick="setFlexDirection('row-reverse')">Row-reverse</button>
-        <button onclick="setFlexDirection('column')">Column</button>
-        <button onclick="setFlexDirection('column-reverse')">Column-reverse</button>
+        <button onclick="setFlexDirection('row', this)">Row</button>
+        <button onclick="setFlexDirection('row-reverse', this)">Row-reverse</button>
+        <button onclick="setFlexDirection('column', this)">Column</button>
+        <button onclick="setFlexDirection('column-reverse', this)">Column-reverse</button>
     </div>
 
     <div class="container1">
-        <div class="el1">
-            <p>1</p>
-        </div>
-        <div class="el2">
-            <p>2</p>
-        </div>
-        <div class="el3">
-            <p>3</p>
-        </div>
-        <div class="el4">
-            <p>4</p>
-        </div>
+        <div class="el1"><p>1</p></div>
+        <div class="el2"><p>2</p></div>
+        <div class="el3"><p>3</p></div>
+        <div class="el4"><p>4</p></div>
     </div>
 
     <div class="jus">
         <p>justify-content</p>
-        <button onclick="setJustifyContent('flex-start')">Flex-start</button>
-        <button onclick="setJustifyContent('flex-end')">Flex-end</button>
-        <button onclick="setJustifyContent('center')">Center</button>
-        <button onclick="setJustifyContent('space-between')">Space-between</button>
-        <button onclick="setJustifyContent('space-around')">Space-around</button>
-        <button onclick="setJustifyContent('space-evenly')">Space-evenly</button>
+        <button onclick="setJustifyContent('flex-start', this)">Flex-start</button>
+        <button onclick="setJustifyContent('flex-end', this)">Flex-end</button>
+        <button onclick="setJustifyContent('center', this)">Center</button>
+        <button onclick="setJustifyContent('space-between', this)">Space-between</button>
+        <button onclick="setJustifyContent('space-around', this)">Space-around</button>
+        <button onclick="setJustifyContent('space-evenly', this)">Space-evenly</button>
     </div>
 
     <div class="container2">
-        <div class="el1">
-            <p>1</p>
-        </div>
-        <div class="el2">
-            <p>2</p>
-        </div>
-        <div class="el3">
-            <p>3</p>
-        </div>
-        <div class="el4">
-            <p>4</p>
-        </div>
+        <div class="el1"><p>1</p></div>
+        <div class="el2"><p>2</p></div>
+        <div class="el3"><p>3</p></div>
+        <div class="el4"><p>4</p></div>
     </div>
 
     <div class="al">
         <p>align-items</p>
-        <button onclick="setAlignItems('flex-start')">Flex-start</button>
-        <button onclick="setAlignItems('flex-end')">Flex-end</button>
-        <button onclick="setAlignItems('center')">Center</button>
-        <button onclick="setAlignItems('baseline')">Baseline</button>
-        <button onclick="setAlignItems('stretch')">Stretch</button>
+        <button onclick="setAlignItems('flex-start', this)">Flex-start</button>
+        <button onclick="setAlignItems('flex-end', this)">Flex-end</button>
+        <button onclick="setAlignItems('center', this)">Center</button>
+        <button onclick="setAlignItems('baseline', this)">Baseline</button>
+        <button onclick="setAlignItems('stretch', this)">Stretch</button>
     </div>
     
-
     <div class="container3">
-        <div class="el1">
-            <p>1</p>
-        </div>
-        <div class="el2">
-            <p>2</p>
-        </div>
-        <div class="el3">
-            <p>3</p>
-        </div>
-        <div class="el4">
-            <p>4</p>
-        </div>
+        <div class="el1"><p>1</p></div>
+        <div class="el2"><p>2</p></div>
+        <div class="el3"><p>3</p></div>
+        <div class="el4"><p>4</p></div>
     </div>
 
     <script src="dop.js"></script>
