--- a/7/dop.html
+++ b/7/dop.html
@@ -51,10 +51,10 @@
     </div>
     
     <div class="container3">
-        <div class="el1"><p>1</p></div>
-        <div class="el2"><p>2</p></div>
-        <div class="el3"><p>3</p></div>
-        <div class="el4"><p>4</p></div>
+        <div class="el3-1"><p>1</p></div>
+        <div class="el3-2"><p>2</p></div>
+        <div class="el3-3"><p>3</p></div>
+        <div class="el3-4"><p>4</p></div>
     </div>
 
     <script src="dop.js"></script>
