--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         <li>
             <a href="./6/index.html">Лабораторная работа 6</a>
         </li>
+        <li>
+            <a href="./7/index.html">Лабораторная работа 7</a>
+        </li>
+        <li>
+            <a href="./7/dop.html">Лабораторная работа 7 доп. задание</a>
+        </li>
     </ul>
 </body>
 </html>
