--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
         <li>
             <a href="./7/dop.html">Лабораторная работа 7 доп. задание</a>
         </li>
+        <li>
+            <a href="./8/index.html">Лабораторная работа 8</a>
+        </li>
+        <li>
+            <a href="./8/dop.html">Лабораторная работа 8 доп. задание</a>
+        </li>
     </ul>
 </body>
 </html>
