--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
         <li>
             <a href="./8/dop.html">Лабораторная работа 8 доп. задание</a>
         </li>
+        <li>
+            <a href="./9/index.html">Лабораторная работа 9</a>
+        </li>
+        <li>
+            <a href="./9/dop.html">Лабораторная работа 9 доп. задание</a>
+        </li>
     </ul>
 </body>
 </html>
