--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
         <li>
             <a href="./9/dop.html">Лабораторная работа 9 доп. задание</a>
         </li>
+        <li>
+            <a href="./11/index.html">Лабораторная работа 11</a>
+        </li>
+        <li>
+            <a href="./11/dop.html">Лабораторная работа 11 доп. задание</a>
+        </li>
     </ul>
 </body>
 </html>
